--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
               tài</a>
             <a href="#" class="dropdown-item"><i class="fa fa-check-square-o" aria-hidden="true"></i> Kiểm
               duyệt đề tài</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-users" aria-hidden="true"></i> Danh
+            <a href="#"  class="dropdown-item"><i class="fa fa-users" aria-hidden="true"></i> Danh
               sách sinh viên</a>
             <a href="#" class="dropdown-item"><i class="fa fa-spinner" aria-hidden="true"></i> Quản
               lý tiến độ</a>
@@ -113,7 +113,7 @@
                data-parent="#accordionExample">
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-users" aria-hidden="true"></i>
+                <li class="list-group-item"><a href="#" [routerLink]="['/student/student-list']"><i class="fa fa-users" aria-hidden="true"></i>
                   Danh sách sinh viên
                 </a></li>
                 <li class="list-group-item"><a href="#"><i class="fa fa-address-card"
