--- a/src/app/nav-bar/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar/nav-bar.component.css
@@ -20,12 +20,16 @@ html,body {
 /*    width:100%;*/
 /*    height:200px;*/
 /*}*/
-
+#contenNavabar{
+  position: relative;
+  left: 40px;
+}
 .form-inline {
   display: inline-block;
 }
 .nav-link {
- padding: 0.5rem 10rem
+ /*padding: 0.5rem 10rem;*/
+  font-size: 15px;
 }
 .navbar-header.col {
   padding: 0 !important;
@@ -541,4 +545,5 @@ html,body {
   width: 80vw;
   display: inline-block;
   vertical-align: center;
+  background: bisque;
 }
