--- a/src/app/side-bar/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar/side-bar.component.html
@@ -1,6 +1,88 @@
 
-  <div>
-    <h2> Bảng tin tiêu điểm</h2>
+      <div class="accordion mb-2 mt-5 " id="accordionExample" >
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h2 class="mb-0">
+              <a data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <span><i class="fa fa-user"></i> Tin tức</span>
+                <i class="fa fa-chevron-down toggle"></i>
+              </a>
+            </h2>
+          </div>
+          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item"><a href="#"><i class="fa fa-pencil"></i> Thông báo</a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-key"></i> Tin tức- Sự kiện</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h2 class="mb-0">
+              <a data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <span><i class="fa fa-comments"></i> Tin tức khác</span>
+                <i class="fa fa-chevron-down toggle rotate"></i>
+              </a>
+            </h2>
+          </div>
+          <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionExample">
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item"><a href="#"><i class="fa fa-inbox"></i> Đào tạo <span class="badge badge-pill badge-primary">20</span></a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-paper-plane"></i> Tuyển sinh</a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-file-text"></i> Sinh viên <span class="badge badge-pill badge-info">15</span></a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-trash"></i> Cựu sinh viên</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h2 class="mb-0">
+              <a data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <span><i class="fa fa-bar-chart"></i> Các trung tâm học liệu</span>
+                <i class="fa fa-chevron-down toggle"></i>
+              </a>
+            </h2>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item"><a href="#"><i class="fa fa-dollar"></i> Sales</a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-tags"></i> Orders</a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-plane"></i> Shipment</a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-users"></i> Customers</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingFour">
+            <h2 class="mb-0">
+              <a data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                <span><i class="fa fa-cog"></i> Đổi mới sáng tạo</span>
+                <i class="fa fa-chevron-down toggle"></i>
+              </a>
+            </h2>
+          </div>
+          <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item"><a href="#"><i class="fa fa-font"></i> Typography</a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-bell"></i> Notifications</a></li>
+                <li class="list-group-item"><a href="#"><i class="fa fa-map"></i> Maps</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingFive">
+            <h2 class="mb-0"><a href="#"><i class="fa fa-power-off"></i> </a></h2>
+          </div>
+        </div>
+      </div>
 
-  </div>
+
 
