--- a/src/app/student/subscribe-thesis/subscribe/subscribe.component.css
+++ b/src/app/student/subscribe-thesis/subscribe/subscribe.component.css
@@ -69,7 +69,7 @@ form {
 }
 
 .second {
-  margin: 10% 0 0 5%;
+  margin: 5.5% 0 0 5%;
   font-weight: bold;
 }
 
@@ -166,4 +166,8 @@ form {
 
 .statusTitle {
   width: 15%;
+}
+
+h1 {
+  margin: 0.3% 0 0 0;
 }
