--- a/src/app/student/subscribe-thesis/view-thesis/view-thesis.component.html
+++ b/src/app/student/subscribe-thesis/view-thesis/view-thesis.component.html
@@ -4,7 +4,7 @@
   </div>
   <hr>
   <div class="row justify-content-center">
-    <form>
+    <form (keydown)="keyDownFunction($event)">
       <div class="row">
         <div class="col-sm-3">
           <h5>Tên đề tài : </h5>
