--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
               lý tiến độ</a>
             <a routerLink="/teacher/feed-back" class="dropdown-item"><i class="fa fa-commenting" aria-hidden="true"></i>Thắc
               mắc sinh viên</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-book" aria-hidden="true"></i>Tài
+            <a routerLink="/teacher/instruction" class="dropdown-item"><i class="fa fa-book" aria-hidden="true"></i>Tài
               liệu hướng dẫn</a>
             <div class="dropdown-divider"></div>
           </div>
@@ -38,6 +38,7 @@
           <div class="dropdown-menu">
             <a href="#" class="dropdown-item"><i class="fa fa-file" aria-hidden="true"></i>Nộp luận
               văn</a>
+            <a href="#" class="dropdown-item"><i class="fa fa-file" aria-hidden="true"></i>Báo cáo tiến độ</a>
             <a href="#" class="dropdown-item"><i class="fa fa-key" aria-hidden="true"></i>Đổi mật
               khẩu</a>
             <a href="#" class="dropdown-item"><i class="fa fa-info-circle" aria-hidden="true"></i> Thay
