--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -175,7 +175,7 @@
         </div>
         <div class="card">
           <div class="card-header" id="headingFive">
-            <h2 class="mb-0"><a href="#"><i class="fa fa-pie-chart" aria-hidden="true"></i> Thống kê</a>
+            <h2 class="mb-0"><a routerLink="/teacher/statistics"><i class="fa fa-pie-chart" aria-hidden="true"></i> Thống kê</a>
             </h2>
           </div>
         </div>
