--- a/src/app/teacher/statistics/statistics-teacher/statistics-teacher.component.html
+++ b/src/app/teacher/statistics/statistics-teacher/statistics-teacher.component.html
@@ -106,7 +106,7 @@
         <span>Số lượng đề tài</span>
       </div>
       <div class="col-lg-2 col-md-6">
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" [value]="thesisList.length">
       </div>
     </div>
     <div class="row m-1">
@@ -114,7 +114,7 @@
         <span>Số lượng đề tài trùng</span>
       </div>
       <div class="col-lg-2 col-md-6">
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" [value]="duplicateThesisList.length">
       </div>
     </div>
     <div class="row m-1">
@@ -122,7 +122,7 @@
         <span>Số lượng đề tài kiểm duyệt</span>
       </div>
       <div class="col-lg-2 col-md-6">
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" [value]="checkedThesisList.length">
       </div>
     </div>
     <div class="row m-1">
