finish statistics amount

--- a/src/app/teacher/statistics/statistics-teacher/statistics-teacher.component.html
+++ b/src/app/teacher/statistics/statistics-teacher/statistics-teacher.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-10">
-      <label for="">Yêu cầu thống kê</label>
+      <label for="">Yêu cầu thống kê</label><br>
       <select name="" id="" [(ngModel)]="selection">
         <option value="thesis">Tình trạng đăng kí đề tài</option>
         <option value="teacher">Tình trạng đăng kí giáo viên</option>
