--- a/src/app/teacher/feed-back/feed-back.component.html
+++ b/src/app/teacher/feed-back/feed-back.component.html
@@ -1,1 +1,127 @@
-<p>feed-back works!</p>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+<div class="row">
+  <div class="table-wrapper">
+    <div class="table-title">
+      <div class="row m-0">
+        <div class="col-3 m-0 p-0">
+        </div>
+        <div class="col-9 m-0 p-0">
+          <h2><b>Danh sách câu hỏi</b></h2>
+        </div>
+      </div>
+    </div>
+
+    <table class="table table-striped table-hover">
+      <thead>
+      <tr>
+        <th>STT</th>
+        <th>Tên sinh viên/tên nhóm</th>
+        <th>Tiêu đề</th>
+        <th>Nội dung</th>
+        <th>Chi tiết</th>
+        <th>Xóa</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let item of feedBackList |paginate: { itemsPerPage: 5, currentPage: p}">
+        <td>{{item.id}}</td>
+        <td>{{item.studentName}}</td>
+        <td>{{item.title}}</td>
+        <td>{{item.content}}</td>
+        <td>
+          <i class="material-icons text-info" title="Detail"
+             (click)="getInfoQuestion(item.interactonId)">remove_red_eye</i>
+        </td>
+        <td>
+          <i (click)="deteteQuestion(item.interactonId)" class="material-icons text-danger" title="Delete" data-bs-toggle="modal" data-bs-target="#modalDelete">&#xE872;</i>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+
+  </div>
+</div>
+
+
+<!--Information question-->
+<div class="row" *ngIf="infoQuestion">
+  <div class="table-wrapper">
+    <div class="table-title">
+      <div class="row m-0">
+        <div class="col-3 m-0 p-0">
+        </div>
+        <div class="col-9 m-0 p-0">
+          <h2><b>Thông tin câu hỏi</b></h2>
+        </div>
+      </div>
+    </div>
+    <div class="row m-0">
+      <div class="col-2 mt-1">
+        <label for="ten">Tên sinh viên/nhóm:</label>
+      </div>
+      <div class="col-10">
+        <input id="ten" style="width: 100%" [value]="infor.nameStudent" disabled>
+      </div>
+    </div>
+    <div class="row m-0">
+      <div class="col-2 mt-1">
+        <label for="tieuDe">Tiêu đề: </label>
+      </div>
+      <div class="col-10">
+        <input id="tieuDe" style="width: 100%" [value]="infor.title" disabled>
+      </div>
+    </div>
+    <div class="row m-0">
+      <div class="col-2 mt-1">
+        <label for="noiDung">Nội dung:</label>
+      </div>
+      <div class="col-10">
+          <textarea rows="3" id="noiDung" style="width: 100%;resize: none;" [value]="infor.content" disabled>Nội dung 1
+          </textarea>
+      </div>
+    </div>
+    <div class="table-title mt-3">
+      <div class="row m-0">
+        <div class="col-3 m-0 p-0">
+        </div>
+        <div class="col-9 m-0 p-0">
+          <h2><b>Lịch sử tương tác</b></h2>
+        </div>
+      </div>
+    </div>
+    <div class="row m-0" style="border-style: groove">
+      <p>Nguyễn Hồng Nhật: Thắc mắc?
+        <br>
+        Giáo viên: Trả lời thắc mắc.
+        <br>
+        Nguyễn Hồng Nhật: Tiếp tục thắc mắc?
+        <br>
+        Giáo viên: Tiếp tục trả lời.
+      </p>
+    </div>
+    <div class="table-title mt-3">
+      <div class="row m-0">
+        <div class="col-3 m-0 p-0">
+        </div>
+        <div class="col-9 m-0 p-0">
+          <h2><b>Trả lời sinh viên</b></h2>
+        </div>
+      </div>
+    </div>
+    <div class="row m-0" style="border-style: groove">
+      <p>Nội dung trả lời.</p>
+    </div>
+    <div class="row m-0">
+      <div class="col-9"></div>
+      <div class="col-3 p-0">
+        <button class="btn btn-success" style="margin-top: 10px;margin-left: 85px">Gửi</button>
+        <button (click)="close()" class="btn btn-danger" style="margin-top: 10px; margin-left: 10px">Đóng lại</button>
+        <!--          <button class="btn btn-success" >Đóng lại</button>-->
+      </div>
+    </div>
+  </div>
+</div>
+
+
