--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,8 @@
           <div class="dropdown-menu">
             <a href="#" class="dropdown-item"><i class="fa fa-file" aria-hidden="true"></i>Nộp luận
               văn</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-file" aria-hidden="true"></i>Báo cáo tiến độ</a>
+            <a routerLink="/student/send-thesis-detail" class="dropdown-item"><i class="fa fa-file"
+                                                                                 aria-hidden="true"></i>Báo cáo tiến độ</a>
             <a href="#" class="dropdown-item"><i class="fa fa-key" aria-hidden="true"></i>Đổi mật
               khẩu</a>
             <a href="#" class="dropdown-item"><i class="fa fa-info-circle" aria-hidden="true"></i> Thay
@@ -75,8 +76,8 @@
 </nav>
 <div class="container-fluid my-0 " id="container">
   <div class="row p-1">
-<!--    Side-bar-->
-    <div class="col-lg-9">
+    <!--    Side-bar-->
+    <div class="col-lg-9 mt-2 mb-3">
       <router-outlet></router-outlet>
     </div>
     <div class="col-lg-3">
@@ -121,7 +122,7 @@
                   Danh sách sinh viên
                 </a></li>
                 <li class="list-group-item"><a href="#"><i class="fa fa-address-card"
-                                                           aria-hidden="true"></i> Thêm thông tin
+                                                           aria-hidden="true"></i>Thêm thông tin
                   sinh viên</a></li>
                 <li class="list-group-item"><a href="#"><i class="fa fa-pencil" aria-hidden="true"></i>
                   Sửa thông tin
@@ -193,10 +194,10 @@
         </div>
       </div>
     </div>
-<!--    End side bar-->
+    <!--    End side bar-->
 
-    </div>
   </div>
+</div>
 
 
 
