danh_nq 27/1 "list student - check thesis"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
             <a href="#" class="dropdown-item"><i class="fa fa-bell-o" aria-hidden="true"></i> Đăng thông báo</a>
             <a href="#" class="dropdown-item"><i class="fa fa-list-alt" aria-hidden="true"></i>Danh sách đề
               tài</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-check-square-o" aria-hidden="true"></i> Kiểm
+            <a href="#" routerLink="/teacher/check-thesis" class="dropdown-item"><i class="fa fa-check-square-o" aria-hidden="true"></i> Kiểm
               duyệt đề tài</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-users" aria-hidden="true"></i> Danh
+            <a href="#" routerLink="/teacher/list-student" class="dropdown-item"><i class="fa fa-users" aria-hidden="true"></i> Danh
               sách sinh viên</a>
             <a href="#" class="dropdown-item"><i class="fa fa-spinner" aria-hidden="true"></i> Quản
               lý tiến độ</a>
@@ -53,7 +53,7 @@
       <a href="#" class="nav-item nav-link notifications"><i class="fa fa-bell-o"></i><span
         class="badge">1</span></a>
       <div class="nav-item dropdown">
-        <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"> Nguyễn Quốc Khánh
+        <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"> Nguyễn Quang Danh
           <b class="caret"></b></a>
         <div class="dropdown-menu">
           <a href="#" class="dropdown-item"><i class="fa fa-user-o"></i> Thông tin</a>
