--- a/src/app/teacher/feed-back/feed-back.component.html
+++ b/src/app/teacher/feed-back/feed-back.component.html
@@ -34,7 +34,8 @@
              (click)="getInfoQuestion(item.interactonId)">remove_red_eye</i>
         </td>
         <td>
-          <i (click)="deteteQuestion(item.interactonId)" class="material-icons text-danger" title="Delete" data-bs-toggle="modal" data-bs-target="#modalDelete">&#xE872;</i>
+          <i (click)="deteteQuestion(item.interactonId)" class="material-icons text-danger" title="Delete"
+             data-bs-toggle="modal" data-bs-target="#modalDelete">&#xE872;</i>
         </td>
       </tr>
       </tbody>
@@ -78,7 +79,7 @@
         <label for="noiDung">Nội dung:</label>
       </div>
       <div class="col-10">
-          <textarea rows="3" id="noiDung" style="width: 100%;resize: none;" [value]="infor.content" disabled>Nội dung 1
+             <textarea rows="3" id="noiDung" style="width: 100%;resize: none;" [value]="infor.content" disabled>Nội dung 1
           </textarea>
       </div>
     </div>
@@ -91,15 +92,12 @@
         </div>
       </div>
     </div>
-    <div class="row m-0" style="border-style: groove">
-      <p>Nguyễn Hồng Nhật: Thắc mắc?
-        <br>
-        Giáo viên: Trả lời thắc mắc.
-        <br>
-        Nguyễn Hồng Nhật: Tiếp tục thắc mắc?
-        <br>
-        Giáo viên: Tiếp tục trả lời.
-      </p>
+    <div class="row m-0" style="border-style: groove" style="height: 200px">
+      <div class="col-lg-12">
+        <p *ngFor="let row of records; let i=index">
+            {{row.name}}: {{row.content}}
+        </p>
+      </div>
     </div>
     <div class="table-title mt-3">
       <div class="row m-0">
@@ -111,14 +109,16 @@
       </div>
     </div>
     <div class="row m-0" style="border-style: groove">
-      <p>Nội dung trả lời.</p>
+      <textarea id="feedback" style="resize: none" cols="3" #feedback style="width: 100%;"
+                placeholder="Nội dung trả lời."></textarea>
     </div>
     <div class="row m-0">
       <div class="col-9"></div>
       <div class="col-3 p-0">
-        <button class="btn btn-success" style="margin-top: 10px;margin-left: 85px">Gửi</button>
+        <button (click)="sentFireBase(feedback)" class="btn btn-success" style="margin-top: 10px;margin-left: 85px">
+          Gửi
+        </button>
         <button (click)="close()" class="btn btn-danger" style="margin-top: 10px; margin-left: 10px">Đóng lại</button>
-        <!--          <button class="btn btn-success" >Đóng lại</button>-->
       </div>
     </div>
   </div>
