front end tạm thời để có cái lấy id 2

--- a/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -55,7 +55,7 @@
             <b class="caret"></b></a>
           <div class="dropdown-menu">
             <a href="#" class="dropdown-item"><i class="fa fa-user-o"></i> Thông tin</a>
-            <a href="#changePassword" data-toggle="modal" class="dropdown-item"><i class="fa fa-key"
+            <a href="#" data-toggle="modal" class="dropdown-item" (click)="openDialogChangePassword()"><i class="fa fa-key"
                                                                                    aria-hidden="true"></i>Đổi
               mật
               khẩu</a>
